# 3d-rederer-using-c-

./: CMakeLists.txt  main.cpp
cpp-opencl-cube/: CMakeLists.txt  README.md
cpp-opencl-cube/include/: math_utils.h
cpp-opencl-cube/kernels/: cube_kernel.cl
cpp-opencl-cube/src/: cl_manager.cpp  cl_manager.h  main.cpp  renderer.cpp  renderer.h
